--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,46 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  auto_size_text: ^3.0.0-nullsafety.0
+  cached_network_image: ^3.0.0
+  carousel_slider: ^4.0.0
+  custom_info_window: ^1.0.1
+  #  provider: ^5.0.0
+  dartz: ^0.10.0-nullsafety.2
+  equatable: ^2.0.2
+  firebase_core: ^1.6.0
+  firebase_crashlytics: ^2.8.4
+  firebase_auth: ^1.4.1
+  google_sign_in: ^5.2.0
+  cloud_firestore: ^1.0.6
+  firebase_storage: ^10.3.4
+  firebase_analytics: ^8.2.0
+  flutter_facebook_auth: '^3.5.0'
+  flutter_bloc: ^8.0.0-dev.2
+  flutter_google_places_hoc081098: ^1.0.0-nullsafety.5
+  flutter_rating_bar: ^4.0.0
+  geolocator:
+  get_it: ^7.1.3
+  google_api_headers: ^1.1.1
+  google_maps_webservice: ^0.0.20-nullsafety.5
+  google_fonts: ^2.1.0
+  google_maps_flutter: ^2.1.8
+  flutter_polyline_points: ^1.0.0
+  http: ^0.13.3
+  intl: ^0.17.0
+  sqflite: ^2.0.3+1
+  path_provider: ^2.0.2
+  permission_handler: ^9.2.0
+  scroll_indicator: ^0.0.3
+  simple_speed_dial: ^0.1.6
+  shared_preferences: ^2.0.15
+  sliding_switch: ^1.0.0
+  toggle_switch: ^2.0.1
+  url_launcher:
+  youtube_player_flutter: ^8.0.0
+  showcaseview: ^1.1.8
+  bubble: ^1.2.1
+  animated_text_kit: ^4.0.0
 
 dev_dependencies:
   flutter_test:
