--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,8 @@ dependencies:
   google_fonts: ^4.0.4
   onboarding: ^3.1.0
   flutter_onboarding: ^0.0.9
+  dots_indicator: ^3.0.0
+  flutter_dotenv: ^5.1.0
 
 
 dev_dependencies:
@@ -80,6 +82,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+#    - .env
     - asset/movies.png
     - asset/television.png
 
