--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,8 @@ dependencies:
   flutter_onboarding: ^0.0.9
   dots_indicator: ^3.0.0
   flutter_dotenv: ^5.1.0
+  font_awesome_flutter: ^10.4.0
+  transparent_image: ^2.0.1
 
 
 dev_dependencies:
@@ -82,8 +84,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-#    - .env
+    - .env
     - asset/movies.png
+    - asset/loading.gif
     - asset/television.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
